--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
+    "react-scroll-to-bottom": "^4.2.0",
     "react-scrollable-feed": "^2.0.2",
     "react-simple-typewriter": "^5.0.1",
     "react-tooltip": "^5.28.0",
